# chetna.ai

./: README.md  pyproject.toml  user_details copy.py  user_details.py  user_mentions.py
.run/: Count Lines.run.xml  Format Files.run.xml
passageDB/joyous_wisdom/: joyous_wisdom_repository.py  scrape.py
scripts/: configuration.py  discussions.py  get_passage.py  llm_chat_completion_service.py  main.py  passage_recommendation_service.py  passage_repository.py  system_prompt.py
src/: main.py  version.py
src/application/modules/queries/: __init__.py  passage_query.py
src/application/passage/queries/: get_passage_query.py
src/cli/commands/: __init__.py  get_passage.py  passage.py  start_discussion.py
src/cli/commands/twitter/: __init__.py  add_users.py  (+1 more)
src/domain/interfaces/: __init__.py  abstract_collect_tweet_to_reply.py  abstract_discussion_repository.py  abstract_llm_completion_service.py  abstract_llm_repository.py  abstract_passage_recommendation_service.py  abstract_passage_repository.py  abstract_passage_to_svg_service.py  abstract_service_provider.py  abstract_tweet_post_service.py  abstract_tweet_search_service.py  abstract_twitter_repository.py
src/domain/prompts/: __init__.py  passage_to_svg_prompt.py  system_prompt.py
src/infrastructure/: container.py  containers.py  dependency_injection.py
src/infrastructure/configuration/: __init__.py
src/infrastructure/data/: __init__.py
src/infrastructure/llm/: __init__.py
src/infrastructure/recommendation/: __init__.py  passage_recommendation_service.py
src/infrastructure/twitter/: __init__.py
(+54 files in other folders)
